# routes.go
@@ -30,6 +30,16 @@ func CollectRoute(r *gin.Engine) *gin.Engine {
 		categoryRoutes.DELETE("/:id", categoryController.Delete)
 	}
 
+	postRoutes := r.Group("/posts")
+	{
+		postRoutes.Use(middleware.AuthMiddleware())
+		postController := controller.NewPostController()
+		postRoutes.POST("",postController.Create)
+		postRoutes.PUT("/:id", postController.Update)
+		postRoutes.GET("/:id", postController.Show)
+		postRoutes.DELETE("/:id", postController.Delete)
+	}
+
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 	return r
 }
